add fonts and corrects

--- a/_sources/jade/sections/catalog_elems.jade
+++ b/_sources/jade/sections/catalog_elems.jade
@@ -1,5 +1,5 @@
 // Блок записи
-a(href="/kitchens/exampleKitchen.html").catalog_elem(data-shape="angle" data-size="middle" data-color="rainbow" data-style="traditional" data-location="home" data-material="wood")
+a.catalog_elem(href="/kitchens/exampleKitchen.html" data-shape="angle" data-size="middle" data-color="rainbow" data-style="traditional" data-location="home" data-material="wood")
 		.wrap_img
 			img(src="images/catalog_elem.jpg")
 		.model
