--- a/_sources/jade/sections/fourth_block.jade
+++ b/_sources/jade/sections/fourth_block.jade
@@ -3,7 +3,7 @@ section.main_block.main_block-black
 		.images__block(style="background-image: url('images/block4_1.jpg')")
 	.info
 		.text
-			h3.wow.animated.slideInRight="Причина заказать кухню у нас #3"
-			p.wow.animated.slideInRight="Мы сделаем дизайн-проект кухни бесплатно. Доставим, поднимем и соберем кухонный гарнитур тоже бесплатно."
-			p.wow.animated.slideInRight="А если у Вас ещё длится ремонт, то Ваша кухня будет находится в целости и сохранности на нашем складе до его окончания абсолютно бесплатно."
-			a(href="/catalog.html").wow.animated.slideInRight.button_catalog="Перейти в каталог"
+			h3.wow.animated.fadeIn="Причина заказать кухню у нас #3"
+			p.wow.animated.fadeIn="Мы сделаем дизайн-проект кухни бесплатно. Доставим, поднимем и соберем кухонный гарнитур тоже бесплатно."
+			p.wow.animated.fadeIn="А если у Вас ещё длится ремонт, то Ваша кухня будет находится в целости и сохранности на нашем складе до его окончания абсолютно бесплатно."
+			a(href="/catalog.html").wow.animated.fadeIn.button_catalog="Перейти в каталог"
