--- a/_sources/jade/sections/second_block.jade
+++ b/_sources/jade/sections/second_block.jade
@@ -3,8 +3,8 @@ section.main_block.main_block-black
 		.images__block(style="background-image: url('images/block2.jpg')")
 	.info
 		.text
-			h3.wow.animated.slideInRight="Причина купить кухню у нас #1"
-			p.wow.animated.slideInRight="Мы являемся производителем и продаём кухонные гарнитуры через интернет-магазин, таким образом мы не тратим деньги на аренду помещения, а Вы не переплачиваете."
-			p.wow.animated.slideInRight="Наше производство и поставщики материалов находятся в г. Набережные Челны, поэтому мы не тратим деньги на логистику, а Вы снова не переплачиваете."
-			p.wow.animated.slideInRight="Благодаря такому подходу наши клиенты получают возможность купить кухню от производителя, экономя минимум 25% от её стоимости."
-			a(href="/catalog.html").wow.animated.slideInRight.button_catalog="Перейти в каталог"
+			h3.wow.animated.fadeIn="Причина купить кухню у нас #1"
+			p.wow.animated.fadeIn="Мы являемся производителем и продаём кухонные гарнитуры через интернет-магазин, таким образом мы не тратим деньги на аренду помещения, а Вы не переплачиваете."
+			p.wow.animated.fadeIn="Наше производство и поставщики материалов находятся в г. Набережные Челны, поэтому мы не тратим деньги на логистику, а Вы снова не переплачиваете."
+			p.wow.animated.fadeIn="Благодаря такому подходу наши клиенты получают возможность купить кухню от производителя, экономя минимум 25% от её стоимости."
+			a(href="/catalog.html").wow.animated.fadeIn.button_catalog="Перейти в каталог"
