--- a/_sources/jade/sections/third_block.jade
+++ b/_sources/jade/sections/third_block.jade
@@ -1,9 +1,9 @@
 section.main_block.main_block-white
 	.images
-		.images__block(style="background-image: url('images/block3.jpg')")
+		.images__block(style="background-image: url('images/block3.jpg'); background-position: right center;")
 	.info
 		.text
-			h3.wow.animated.slideInLeft="Причина купить кухню у нас #2"
-			p.wow.animated.slideInLeft="Мы гарантируем, что через 21 день после заключения договора, Вы получите собранный кухонный гарнитур, в противном случае мы сделаем Вам на него скидку 50%."
-			p.wow.animated.slideInLeft="Мы гарантируем бесплатный ремонт всей нашей мебели в течении 18 месяцев с момента покупки."
-			a(href="/catalog.html").wow.animated.slideInLeft.button_catalog="Перейти в каталог"
+			h3.wow.animated.fadeIn="Причина купить кухню у нас #2"
+			p.wow.animated.fadeIn="Мы гарантируем, что через 21 день после заключения договора, Вы получите собранный кухонный гарнитур, в противном случае мы сделаем Вам на него скидку 50%."
+			p.wow.animated.fadeIn="Мы гарантируем бесплатный ремонт всей нашей мебели в течении 18 месяцев с момента покупки."
+			a(href="/catalog.html").wow.animated.fadeIn.button_catalog="Перейти в каталог"
