--- a/_sources/scss/sections/first_block.scss
+++ b/_sources/scss/sections/first_block.scss
@@ -43,9 +43,10 @@
 		}
 
 		.button_catalog {
-			width: 250px;
+			width: 255px;
 			display: flex;
 			align-items: center;
+			font-family: Oxygen, sans-serif;
 			justify-content: center;
 			height: 50px;
 			margin: 23px auto 0px auto;
