--- a/_sources/jade/sections/first_block.jade
+++ b/_sources/jade/sections/first_block.jade
@@ -4,9 +4,9 @@ section.first_block
 			img(src="images/kitchen1.jpg")
 	.info
 		.text
-			h3.wow.animated.slideInLeft="Кухонные гарнитуры от производителя на 25 % дешевле, чем в салонах."
-			h4.wow.animated.slideInLeft!="3D-проект кухни бесплатно <b class='diamond'> </b> Изготовление 21 день <b class='diamond'> </b> Доставка и сборка бесплатно"
-			a(href="/catalog.html").wow.animated.slideInLeft.button_catalog="Перейти в каталог"
+			h3.wow.animated.fadeIn="Кухонные гарнитуры от производителя на 25 % дешевле, чем в салонах."
+			h4.wow.animated.fadeIn!="3D-проект кухни бесплатно <b class='diamond'> </b> Изготовление 21 день <b class='diamond'> </b> Доставка и сборка бесплатно"
+			a(href="/catalog.html").wow.animated.fadeIn.button_catalog="Перейти в каталог"
 			h5
 				span="Пару слов о нас"
 				.arrow_down.wow.animated.bounceInDown
